Updated tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,9 @@
 set -g prefix C-b
 bind C-b send-key C-b
 
+# Fix copy-paste
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
 ###########################################################################
 # General options
 
@@ -33,6 +36,10 @@ set -g xterm-keys on
 bind-key C-d detach-client
 bind-key C-c new-window
 bind-key C-p paste-buffer
+
+# Force tmux to use utf-8
+setw -gq utf8 on
+set-window-option -g utf8 on
 
 # Redraw the client (if interrupted by wall, etc)
 bind R refresh-client
@@ -120,25 +127,16 @@ bind -t vi-copy Escape cancel
 ###########################################################################
 # Mouse mode
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Toggle mouse on
 bind m \
-    set -g mode-mouse on \;\
-    set -g mouse-resize-pane on \;\
-    set -g mouse-select-pane on \;\
-    set -g mouse-select-window on \;\
+    set -g mouse on \;\
     display 'Mouse: ON'
 
 # Toggle mouse off
 bind M \
-    set -g mode-mouse off \;\
-    set -g mouse-resize-pane off \;\
-    set -g mouse-select-pane off \;\
-    set -g mouse-select-window off \;\
+    set -g mouse off \;\
     display 'Mouse: OFF'
 
 #### COLOUR (Solarized dark)
@@ -172,3 +170,21 @@ set-option -g display-panes-colour colour196 #orange
 
 # clock
 set-window-option -g clock-mode-colour colour40 #green
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+
+# Plugins
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
